fixed carousel margin and arrow spacing.

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -264,7 +264,13 @@ figure {
 	width: 100%;
 	height: 100%;
   overflow: hidden;
+  margin:0;
 }
+
+.hover01 {
+  padding-left: 5px;
+}
+
 
 .Slides img {
   max-height: 500px;
